sumo/tests/duarouter/routes/style1_input/errors/vehicle_false_departpos/errors.duarouter
Error: Invalid departPos definition for vehicle '0'
Quitting (on error).
